--- a/config/database.sample.yml
+++ b/config/database.sample.yml
@@ -5,11 +5,11 @@ default: &default
 
 development:
   <<: *default
-  database: mumslink_development
+  database: python-no-thanks_development
 
 test:
   <<: *default
-  database: mumslink_test
+  database: python-no-thanks_test
 
 production:
   <<: *default
