Fix issues with database.yml.sample

--- a/config/database.sample.yml
+++ b/config/database.sample.yml
@@ -1,15 +1,18 @@
 default: &default
   adapter: postgresql
+  host: localhost
   pool: 5
   timeout: 5000
+  username: workshops
+  password:
 
 development:
   <<: *default
-  database: python-no-thanks_development
+  database: python_no_thanks_development
 
 test:
   <<: *default
-  database: python-no-thanks_test
+  database: python_no_thanks_test
 
 production:
   <<: *default
