--- a/config/database.sample.yml
+++ b/config/database.sample.yml
@@ -1,7 +1,10 @@
 default: &default
   adapter: postgresql
+  host: localhost
   pool: 5
   timeout: 5000
+  username: whatevs
+  password:
 
 development:
   <<: *default
