Fix dropbox, add dropbox to ignore

--- a/config/dropbox.sample.yml
+++ b/config/dropbox.sample.yml
@@ -1,6 +1,6 @@
-app_key: "x2849vxs4azwt1j"
-app_secret: "nkgi0omhrz0bvyg"
-access_token: "epl0cygis5zdz2av"
-access_token_secret: "s57rn8zxgqw71o1"
-user_id: "448750005"
-access_type: "app_folder"
+app_key: ""
+app_secret: ""
+access_token: ""
+access_token_secret: ""
+user_id: ""
+access_type: ""
