Add figaro gem, update gitignore (secrets.yml... y u did dis)

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,9 @@ pickle-email-*.html
 
 #custom configs
 config/dropbox.yml
+
+# Ignore application configuration
+/config/application.yml
+
+# Secrets
+config/secrets.yml
